WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
9694
resize value not compared
https://bugs.webkit.org/show_bug.cgi?id=9694
Summary
resize value not compared
Nicholas Shanks
Reported
2006-07-02 06:19:36 PDT
in rendering/render_style.cpp:497 StyleCSS3InheritedData::operator== the new "resize" value is not compared. is this a bug?
Attachments
Compare resize values
(3.24 KB, patch)
2009-06-21 13:14 PDT
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2009-06-21 13:14:10 PDT
Created
attachment 31618
[details]
Compare resize values
mitz
Comment 2
2009-06-21 13:17:21 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/44912
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug