WebCore:

Reviewed by Sam Weinig.

        - fix https://bugs.webkit.org/show_bug.cgi?id=9694
          resize value not compared

        Test: fast/css/resize-value-compared.html

        * rendering/style/StyleRareInheritedData.cpp:
        (WebCore::StyleRareInheritedData::operator==): Compare the resize
        member.

LayoutTests:

        Reviewed by Sam Weinig.

        - test for https://bugs.webkit.org/show_bug.cgi?id=9694
          resize value not compared

        * fast/css/resize-value-compared-expected.txt: Added.
        * fast/css/resize-value-compared.html: Added.



Canonical link: https://commits.webkit.org/36724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44912 268f45cc-cd09-0410-ab3c-d52691b4dbfc